@@ -5,6 +5,7 @@ from allauth.account import app_settings as account_settings
 from allauth.account.models import EmailConfirmation, EmailAddress
 from allauth.socialaccount.providers import registry
 from allauth.tests import MockedResponse
+from allauth.account.signals import user_signed_up
 
 from provider import GoogleProvider
 
@@ -34,6 +35,25 @@ class GoogleTests(create_oauth2_tests(registry.by_id(GoogleProvider.id))):
         self.assertFalse(EmailConfirmation.objects \
                              .filter(email_address__email=test_email) \
                              .exists())
+
+    @override_settings(SOCIALACCOUNT_AUTO_SIGNUP=True,
+                       ACCOUNT_SIGNUP_FORM_CLASS=None,
+                       ACCOUNT_EMAIL_VERIFICATION
+                       =account_settings.EmailVerificationMethod.MANDATORY)
+    def test_user_signed_up_signal(self):
+        sent_signals = []
+
+        def on_signed_up(sender, request, user, **kwargs):
+            sociallogin = kwargs['sociallogin']
+            self.assertEquals(sociallogin.account.provider,
+                              GoogleProvider.id)
+            self.assertEquals(sociallogin.account.user,
+                              user)
+            sent_signals.append(sender)
+
+        user_signed_up.connect(on_signed_up)
+        self.login(self.get_mocked_response(verified_email=True))
+        self.assertTrue(len(sent_signals) > 0)
 
     @override_settings(SOCIALACCOUNT_AUTO_SIGNUP=True,
                        ACCOUNT_SIGNUP_FORM_CLASS=None,
