@@ -1,3 +1,9 @@
+2013-01-29  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* account: `user_signed_up` signal now emits an optional
+	`sociallogin` parameter so that receivers can easily differentiate
+	between local and social signups.
+
 2013-01-24  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* account: Added `email_removed` signal.
